tests/diag/origin-chain.err
tests/diag/origin-chain.id:2:25: error: unbound identifier 'no-such-fn'
  in expansion of 'inner'
  in expansion of 'outer'
