tests/diag/origin-chain.id
defmacro outer stx -> %`(inner 1)
defmacro inner stx -> %`(no-such-fn 1)
outer x
